website/static/css/custom.css
/* your custom css */

.fixedHeaderContainer{
    height: 60px;
}

.gray-background{
    background: #FBFBFB;
}

.card-categories{
    /* Rectangle: */
    background: #FFFFFF;
    border-radius: 5px;
    box-shadow: 0px 5px 5px 0px rgba(0, 0, 0, 0.05);
    width: 300px;
    padding:10px 20px;
    margin: 20px;
    cursor: pointer;
}

.section-card-title .icon{
    padding-right: 10px;
    margin-top: 5px;
}


.flex-categories-container{
    display: flex;
    justify-content: center;
    flex-wrap: wrap;
}

.main-title {
    font-family: "Raleway", Arial, Helvetica, sans-serif;
    text-align: center;
    font-size: 36px;
    font-weight: 500;
    line-height: 54px;
    letter-spacing: 0;
    color: white;
    padding: 0px 0 30px;
    margin-top: 0px;
}
.main-description {
    font-family: "Roboto", Arial, Helvetica, sans-serif;
    text-align: center;
    font-size: 20px;
    font-weight: 400;
    line-height: 36px;
    letter-spacing: 0;
    color: black;
    margin-bottom: 0px;   
    margin-top: 0px;    
}
.section-title {
    font-family: "Raleway", Arial, Helvetica, sans-serif;
    text-align: center;
    font-size: 30px;
    font-weight: 500;
    line-height: 50px;
    letter-spacing: 0;
    color: black;
    margin-bottom: 0;
    margin-top: 0px;  
    font-weight: 600;   
  }
  
  .section-card-title {
    font-family: "Raleway", Arial, Helvetica, sans-serif;
    text-align: center;
    font-size: 20px;
    font-weight: 400;
    line-height: 38px;
    letter-spacing: 0;
    color: black;
    margin-bottom: 0;
    margin-top: 0px ;   
    font-weight: 600; 
  }
  
  .section-description {
    font-family: "Roboto", Arial, Helvetica, sans-serif;
    text-align: justify;
    font-size: 14px;
    font-weight: 300;
    line-height: 28px;
    letter-spacing: 0;
    margin-top: 0px;    
  }


  div#home-wrapper {
    padding-bottom: 0px;
  }
  

  ul.nav-site.nav-site-internal li a{
    color: white;
    font-weight: 600;
    font-family: 'Raleway', Arial, Helvetica, sans-serif;
  }

  .primary-button {
    height: 40px;
    background: #F57C41;
    border-radius: 4px;
    display: block;
    font-weight: 600;
    color: #fff;
    letter-spacing: 1px;
    margin: auto;
    max-width: 300px;
    padding: 5px 12px;
    width: 100%;
    text-align: center;
    margin-top: 5px;
    border: none;
    cursor: pointer;
  }

  .primary-button:hover{
    text-decoration: none;
    color: white !important;
    background: #F57C41 !important;
  }
  .primary-button:focus{
    outline:0; 
  }

  .docMainWrapper{
      padding-left: 20px;
      padding-right: 20px;
  }

.primary-color {
    color: #F57C41 !important;
}
  
.nav-footer{
    background: #f7f6f6;
    opacity: 1 !important;
}
.nav-footer .sitemap a{
    color: black !important;
}

.nav-footer .sitemap h5 {
    color: black !important;
}
.nav-footer .copyright{
    color: black !important;
}

.nav-footer .sitemap .nav-home {
    display: block;
    height: auto;
    opacity: 1;
    width: 107px;
    padding-left: 0px;
    padding-right: 0px;
}

.homeContainer{
    background: url('/docs/img/top-fold-background.jpg');
    background-size: cover;
}

.navigationSlider .slidingNav ul{
    background: #1C3E75;
}

@media only screen and (min-device-width: 360px) and (max-device-width: 736px) {
    
}

@media only screen and (min-width:768px){

    
    .docMainWrapper{
        padding-left: 60px;
        padding-right: 60px;
    }

    .headerWrapper{
        padding-left: 60px;
        padding-right: 60px;
        margin-top: 1px;
    }

    ul.nav-site.nav-site-internal li .primary-button{
        margin-left:30px;
        width: 140px;
        font-size: 14px;
    }

    .headerWrapper header a{
        height: 40px;
    }
    .fixedHeaderContainer header img {
        height: 100%;
        margin-right: 0px; 
        height: 40px;
        width: 109px;
    }

    div#home-wrapper {
        padding-left: 60px;
        padding-right: 60px;
    }

    .nav-footer .sitemap .nav-home {
        margin-left: 30px;
        margin-right: 60px;
    }
    
    
}

@media only screen and (min-width: 1024px) {
    
    .main-title{
        font-size: 45px;
        line-height: 61px;
        text-align: start;
        color: white;
        padding-top: 30px;
    }
    .main-description {
        font-size: 30px;
        line-height: 45px;
        font-weight: 300;
        text-align: start;
    }
    .section-title {
        font-size: 36px;
        line-height: 52px;
        text-align: start;
    }
      
    .section-card-title {
        font-size: 20px;
        line-height: 52px;
        text-align: center;
        margin-bottom: 0;
        margin-top: 0px;    
    }
      
    .section-description {
        font-size: 19px;
        line-height: 38px;
    }

    .flex-container{
        display: flex;
        flex-wrap: wrap;
        justify-content: space-between;
    }

    .flex-container .two-row{
        max-width: 50%;
    }

    .fixedHeaderContainer{
        height: 80px;
        padding-top: 18px;
    }
      
    ul.nav-site.nav-site-internal li a{
        padding: 5px 30px 5px;
        margin-top: 1px;
    }


    .top-fold-image{
        max-width: 100%;
    }
    

      
}

@media only screen and (max-width: 1023px) {
}

@media only screen and (min-width: 1160px) {
    .docMainWrapper{
        max-width: 1160px !important;
        margin: auto;
        padding-left: 0px;
        padding-right:0px;
        padding-top: 20px;
    }
    .headerWrapper{
        max-width: 1160px !important;
        padding: 0 0;
    }

    .main-title{  
        
    }

    ul.nav-site.nav-site-internal li .primary-button{
        width: 140px;
        height: 30px;
        font-size: 14px;
        margin-left:30px;
        margin-top: 2px;
    }
}

@media only screen and (min-width: 1400px) {
    
}

@media only screen and (min-width: 1500px) {
    .headerWrapper{
        max-width: 1400px !important;
        padding: 0 0;
    }
    .docMainWrapper{
        max-width: 1400px !important;
        padding: 0 0;
    }
}

